feat(core): 更新项目配置并重构框架核心功能
- 添加 cutejava-module-gitlab 模块到项目结构
- 更新多个依赖库版本包括 mybatis-plus、hutool、jjwt 等
- 移除 undertow 相关配置，切换到其他数据库连接池
- 在 KitPageArgs 中新增 OrderBy 排序功能类
- 重命名应用名称从 cutejava 到 kenaito-pilot
- 使用 EvalEx 替换 Rhino 实现脚本表达式计算
- 优化 KitSpringBeanHolder 中的注解和线程 ID 获取方式
- 重构全局异常处理器，改进错误处理逻辑
- 移除废弃的执行时间统计注解和切面功能
- 优化 MyBatis Plus 相关接口和实现类的功能
- 重构数据访问层的服务接口和实现方法